rusqlite_migration/src/validations/snapshots/rusqlite_migration__validations__tests__missing_downward_middle.snap
---
source: rusqlite_migration/src/validations/tests.rs
expression: "Validations::everything().validate(&migrations)"
snapshot_kind: text
---
Err(
    MissingDownwardMigrations(
        [
            (
                4,
                "M { up: \"CREATE TABLE t2(b);\", up_hook: None, down: None, down_hook: None, foreign_key_check: false, comment: None }",
            ),
        ],
    ),
)
