rusqlite_migration/src/validations/snapshots/rusqlite_migration__validations__tests__missing_downward_start.snap
---
source: rusqlite_migration/src/validations/tests.rs
expression: "Validations::everything().validate(&migrations)"
snapshot_kind: text
---
Err(
    MissingDownwardMigrations(
        [
            (
                1,
                "M { up: \"CREATE TABLE m1(a, b); CREATE TABLE m2(a, b, c);\", up_hook: None, down: None, down_hook: None, foreign_key_check: false, comment: None }",
            ),
        ],
    ),
)
