rusqlite_migration/src/validations/snapshots/rusqlite_migration__validations__tests__multiple_missing_multiple_errors.snap
---
source: rusqlite_migration/src/validations/tests.rs
expression: "Validations::everything().validate(&migrations)"
snapshot_kind: text
---
Err(
    MissingDownwardMigrations(
        [
            (
                3,
                "M { up: \"ALTER TABLE t1 RENAME COLUMN b TO c;\", up_hook: None, down: None, down_hook: None, foreign_key_check: false, comment: None }",
            ),
            (
                4,
                "M { up: \"CREATE TABLE t2(b);\", up_hook: None, down: None, down_hook: None, foreign_key_check: false, comment: None }",
            ),
            (
                6,
                "M { up: \"\\n        CREATE TABLE fk1(a PRIMARY KEY);\\n        CREATE TABLE fk2(\\n            a,\\n            FOREIGN KEY(a) REFERENCES fk1(a)\\n        );\\n        INSERT INTO fk1 (a) VALUES ('foo');\\n        INSERT INTO fk2 (a) VALUES ('foo');\\n    \", up_hook: None, down: None, down_hook: None, foreign_key_check: true, comment: None }",
            ),
        ],
    ),
)
