rusqlite_migration/src/validations/snapshots/rusqlite_migration__validations__tests__rusqlite_error_conversion.snap
---
source: rusqlite_migration/src/validations/tests.rs
expression: e
snapshot_kind: text
---
underlying rusqlite migration error: rusqlite_migrate error: RusqliteError { query: "", err: InvalidQuery }
