rusqlite_migration/src/validations/snapshots/rusqlite_migration__validations__tests__source.snap
---
source: rusqlite_migration/src/validations/tests.rs
expression: v.unwrap_err().source()
snapshot_kind: text
---
Some(
    RusqliteError {
        query: "Invalid sql",
        err: SqliteFailure(
            Error {
                code: Unknown,
                extended_code: 1,
            },
            Some(
                "near \"Invalid\": syntax error",
            ),
        ),
    },
)
